<resources>
    <string name="app_name">DMSLocationProject</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">Search Families</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="welcome">One City, One Family</string>s
    <string name="welcome_sub">We do not want to lose any of our families.</string>
    <string name="newUser">Registration</string>

    <string name="book">Register to family search</string>
    <string name="name">Name</string>
    <string name="code">Security Code</string>
    <string name="bookBtn">Register</string>

    <string name="latitude"></string>
    <string name="longitude"></string>
    <string name="update">update</string>
    <string name="title_activity_location">Map</string>

    <string name="request_permission_title">Permission Request</string>
    <string name="request_permission_text">Need access to run the program</string>
    <string name="request_permission_positive">Allow</string>


</resources>