<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="420dp"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <View
        android:id="@+id/divider2"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/textBook" />

    <TextView
        android:id="@+id/textBook"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/book"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="@font/imfellenglish_regular"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/registrateNewUserButton"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/divider2" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrateNewUserButton"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/divider2" />

    <EditText
        android:id="@+id/editCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/registrateNewUserButton"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/divider2" />

    <Button
        android:id="@+id/registrateNewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/bookBtn"
        android:textColor="@color/colorAccent"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/divider2" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="304dp"
        android:layout_height="304dp"
        android:layout_marginTop="200dp"
        android:background="#80000000"
        android:elevation="3dp"
        android:progressDrawable="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>