<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">


    <View
        android:id="@+id/divider"
        android:layout_width="420dp"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <View
        android:id="@+id/divider2"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.494" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.36"
        android:onClick="toLogin"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="259dp"
        android:layout_height="203dp"
        android:layout_marginTop="164dp"
        android:background="#80000000"
        android:elevation="3dp"
        android:progressDrawable="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="toRegistrate"
        android:text="Register"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>